# tictactoe

./: README.md
cpp/: .gitignore
cpp/Word Recognition/: CMakeLists.txt  main.cpp  scenetwo.cpp  scenetwo.h
cpp/checkmodule/: CMakeLists.txt  main.cpp  qiproject.xml
cpp/getimage/: getimages.cpp
cpp/handmeasuring/: function.cpp  function.h  handmeasuring.cpp  handmeasuring.h  main.cpp
cpp/headAndLed/: CMakeLists.txt  main.cpp  qiproject.xml
cpp/movesound/: CMakeLists.txt  main.cpp  qiproject.xml
cpp/objecttrack/: CMakeLists.txt  main.cpp  qiproject.xml
cpp/onfacedetection/: onfacedetection.cpp  onfacedetection.h
cpp/playtictactoe1/: kinematics.cpp  main.cpp  playtictactoe.cpp
cpp/playtictactoe1/code/: kinematics.cpp  kinematics.h  playtictactoe.cpp  playtictactoe.h
cpp/playtictactoe1/new/: kinematics.cpp  kinematics.h  playtictactoe.cpp
cpp/playtictactoe2/: CMakeLists.txt  Data Offset.xlsx  qiproject.xml
cpp/tictactoe2/: kinematics.cpp  kinematics.h
cpp/verification/: main.cpp
cpp/walking/: CMakeLists.txt  main.cpp  qiproject.xml
cs/: .gitignore
cs/EXE FILE/: README FIRST.txt
cs/EXE FILE/Nao Saving Joint every 5 second/: LumenBodySensorData.csv  LumenHeadData.csv  Somefile.csv
cs/FaceRecProOV/: How can I get the variable defined in JavaScript via c# WebBrowser .htm  HtmlDocument Class (System.Windows.Forms).htm  HtmlDocument Methods (System.Windows.Forms).htm  HtmlDocument.InvokeScript Method (String) (System.Windows.Forms).htm  WebBrowser Class (System.Windows.Forms).htm
cs/FaceRecProOV/FaceRecProOV/: MainForm (Petrus Subekti's conflicted copy 2014-08-08).cs  MainForm.cs  MultiFaceRec.csproj
cs/FaceRecProOV/How can I get the variable defined in JavaScript via c# WebBrowser _files/: Footer.js  SearchBox.js  core.js  wtid.js  (+2 more)
cs/LUMEN 3.0_13 APRIL 2014/: TO DO.txt
cs/LumenChatterBot2/: LumenChatterBot2.sln
cs/LumenChatterBot2_1/: LumenChatterBot2.sln
cs/LumenVoiceSystem/: LumenVoiceSystem.sln  Readme.txt
cs/NAOServer2/: Readme.txt
cs/NaoBasicControl/: NaoBasicControl.sln
cs/VoiceRecognitionWithLumen/: VoiceRecognitionWithLumen.sln
cs/WCFSocmedProcessing/: WCFSocmedProcessing.sln
(+134 files in other folders)
